# ClinicalOrchestra

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  journal.md  pyproject.toml  render.yaml
benchmark/: README.md  development_cases_359.jsonl  neuro_psych_68_challenges.jsonl
docs/: DESIGN_DECISIONS.md  FRONTIER_MODE_DESIGN_20260625.md  OPERATOR_RUNBOOK.md  architecture.md  augmentation_catalog_20260614.md  continuation_handoff_20260612.md  dataset_prompt_fixes_20260613.md  deepseek_failure_retrieval_workflow.md  deepseek_failure_review_tracker.md  deepseek_pro_failure_case_studies.md  diagnosis_agent_handoff_prompt.md  evaluation_design.md  evolution_ideas_20260613.md  failure_determinacy_analysis_20260615.md  first_diagnostic_harness.md  hard24_gap_analysis_20260614.md  harness_improvements_20260613.md  multi_agent_design_20260614.md  paper_experimental_protocol_20260615.md  paper_references.bib  project_split.md  pubmed_search.md  quickstart.md  reasoning_failure_deepdive_17cases_20260615.md  roadmap.md  run_provenance.md  scaled_retrieval_design_20260614.md  scientific_reasoning_lit_search.md  source_and_licensing.md  wave89_checkpoint_triage_20260616.md
scripts/: analyze_frontier_run.py  bare_top5_eval.py  build_audit_approval_packet.py  build_axis_experiment.py  build_paper_figures.py  build_workshop_submission.py  case_audit.py  corrected_case_prompts.py  crossmodel_eval.py  crossmodel_harness.py  export_paper_rerun_manifests.py  fuse_harness.py  merge_paper_rerun_results.py  package_workshop_source.py  paper_run_status.py  preview_audit_arbitration_cleanup.py  (+6 more)
viewer/backend/: pyproject.toml
viewer/backend/clinical_viewer/: __init__.py  __main__.py  app.py  config.py  events.py  runs.py
viewer/backend/clinical_viewer/adapters/: __init__.py  live.py  replay.py
viewer/backend/tests/: test_live.py  test_replay.py
(+74 files in other folders)
