[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-harness"
version = "0.1.0"
description = "Agentic clinical reasoning workflows that combine search, retrieval, and LLM APIs for hard diagnosis challenges."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ClinicalHarness contributors" }
]
dependencies = []

[project.scripts]
clinical-harness = "clinical_harness.cli:main"
clinical-orchestra = "clinical_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
