[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-viewer"
version = "0.1.0"
description = "Read-only web backend that visualizes ClinicalHarness runs as an agent trace."
requires-python = ">=3.11"
# Deliberately isolated from the harness package, which is stdlib-only by design.
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[project.scripts]
clinical-viewer = "clinical_viewer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clinical_viewer*"]
